--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </table>
     </div>
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+   <script src="script.js"></script>
 </body>
 
 </html>
+
